sync: replace codebase with local master-4 sources
- Restore ChestTracker remote item retrieval (zxy chesttracker bridge,
  mixins, inventory utils) and the full local master-4 feature set
- Remove core/runtime refactor architecture not present in master-4
- Update fabric build scripts and versions/1.21.4 deps
  (quickshulker jars stay untracked under libs/)